src/examples/valid/weird-return.ra
func test(): int {
  return 1;
  if (1 < 2) {
    return 2;
  }
}

func main(): void {
  print(test());
}
