src/examples/invalid/static/not-boolish.ra
func main(): void {
  if (1.0) {
    print("Hi");
  }
}
